k8s/observability/4.wp-gap/k8s/minikube-ingress.yml
---
# Grafana
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: kube-system
spec:
  rules:
  - host: grafana.dev
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: grafana
            port: 
              number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: kube-system
spec:
  type: ExternalName
  externalName: prometheus-grafana.prometheus-stack.svc.cluster.local
---
# AlertManager
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alertmanager
  namespace: kube-system
spec:
  rules:
  - host: alertmanager.dev
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: alertmanager
            port: 
              number: 9093
---
apiVersion: v1
kind: Service
metadata:
  name: alertmanager
  namespace: kube-system
spec:
  type: ExternalName
  externalName: prometheus-kube-prometheus-alertmanager.prometheus-stack.svc.cluster.local
---
# Prometheus
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus
  namespace: kube-system
spec:
  rules:
  - host: prometheus.dev
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: prometheus
            port: 
              number: 9090
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: kube-system
spec:
  type: ExternalName
  externalName: prometheus-kube-prometheus-prometheus.prometheus-stack.svc.cluster.local
---
# WordPress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: word-press
  namespace: kube-system
spec:
  rules:
  - host: word-press.dev
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: word-press
            port: 
              number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: word-press
  namespace: kube-system
spec:
  type: ExternalName
  externalName: wp-wordpress.word-press.svc.cluster.local
